--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,12 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+main {
+
+  background-color: #ffffff;
+  width: 450px;
+  margin:140px auto;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
