--- a/public/styles/sass/globals.scss
+++ b/public/styles/sass/globals.scss
@@ -3,6 +3,8 @@ $text-colour: rgb(36, 71, 81);
 $link: rgb(57, 204, 183);
 $border: rgb(205, 205, 205);
 
+$breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+
 html {
     box-sizing: border-box;
 }
@@ -12,16 +14,39 @@ html {
 }
 
 body {
+    display: flex;
     margin: 0;
     color: $text-colour;
     background-color: $main;
     font-family: 'Roboto Condensed', sans-serif;
+    @include media("<tablet") {
+        font-size: 0.5em;
+        p, h1, h2{
+            font-size: 2em;
+        }
+    }
+    font-size: 1em;
 }
 
 main {
+    //flex-grow: 1;
     background-color: #ffffff;
     width: 450px;
-    margin: 0 auto;
+    justify-content: center;
+    margin: auto;
     padding: 80px 0 0 0;
     height: 100%;
 }
+
+p {
+    font-size: 1rem;
+}
+
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
