--- a/public/styles/sass/nav.scss
+++ b/public/styles/sass/nav.scss
@@ -1,36 +1,40 @@
 #nav-bar {
+    background-color: #00A887;
+    color: #e8fdff;
     z-index: 1;
     position: fixed;
     top: 0;
     width: 100%;
     height: 80px;
-    background-color: #00A887;
-    color: #e8fdff;
     padding: 0 2em 0 2em;
-    line-height: 80px;
+    display: flex;
+    align-items: flex-start;
+    @include media("<=tablet"){
+        justify-content: space-between;
+        align-items: center;
+    }
 
     .logo {
-        float: left;
         width: 80px;
         height: 80px;
+        margin-right: 0;
     }
 
-    .header {
-        float: left;
-        padding: 0 0 0 10px;
+    .h2 {
         font-size: 2em;
+        margin-right: auto;
+        padding-left:10px;
     }
 
-    button {
+    #addTweet {
         border: 1px solid #000000;
         border-radius: 5px;
         background-color: #E7FDFF;
         color: #009E84;
-        padding: 15px;
-        float: right;
+        padding: 1rem;
         font-size: 1.5em;
-        margin: 10px;
-
+        margin: auto;
+        margin-right: 0;
         &:hover {
             background-color: #FFFFFF;
             color: #000000;
