--- a/public/styles/sass/globals.scss
+++ b/public/styles/sass/globals.scss
@@ -1,7 +1,4 @@
-
-
-$breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
-
+// Global SASS
 html {
     box-sizing: border-box;
 }
@@ -26,7 +23,6 @@ body {
 }
 
 main {
-    //flex-grow: 1;
     background-color: #ffffff;
     width: 450px;
     justify-content: center;
@@ -34,6 +30,8 @@ main {
     padding: 80px 0 0 0;
     height: 100%;
 }
+
+//Fonts
 
 p {
     font-size: 1rem;
