--- a/public/styles/sass/mixins.scss
+++ b/public/styles/sass/mixins.scss
@@ -1,8 +1,13 @@
+// Colours
 $main: rgb(238, 238, 238);
 $text-colour: rgb(36, 71, 81);
 $link: rgb(57, 204, 183);
 $border: rgb(205, 205, 205);
+
+//@media breakpoints
 $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+
+//Main mixins
 @mixin transition($time) {
     -moz-transition: all $time ease-in;
     -o-transition: all $time ease-in;
